--- a/http/debian-8/preseed.cfg
+++ b/http/debian-8/preseed.cfg
@@ -6,7 +6,7 @@ d-i clock-setup/utc-auto boolean true
 d-i finish-install/reboot_in_progress note
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i keymap select us
+d-i keymap select no
 d-i mirror/country string manual
 d-i mirror/http/directory string /debian
 d-i mirror/http/hostname string httpredir.debian.org
